--- a/zakharo_game.html
+++ b/zakharo_game.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name = "viewport" content = "width=device-width">
-	<title>Clean Ocean Game</title>
-	<link rel="stylesheet" href="game.css">
-</head>
-<body>
-	<h1>Clean Ocean</h1>
-	<div class="wrapper">
-            <canvas width="0" height="0" class="canvas" id="canvas">Ваш браузер не поддерживает JavaScript и HTML5!</canvas>
-        </div>
-    <canvas></canvas>
-    <script src = "game.js" type = "text/javascript"></script>
-</body>
+  <head>
+	  <meta name = "viewport" content = "width=device-width">
+	  <meta charset="UTF-8">
+	  <title>Clean Ocean Game</title>
+	  <script src="game.js"></script>
+	  <link rel="stylesheet" href="game.css">
+  </head>
+  <body>
+	  <div class="wrapper">
+              <canvas width="0" height="0" class="canvas" id="canvas">Ваш браузер не поддерживает JavaScript и HTML5!</canvas>
+          </div>
+  </body>
 </html>
