add canvas player and enemy

--- a/zakharo_game.html
+++ b/zakharo_game.html
@@ -8,8 +8,13 @@
 	  <link rel="stylesheet" href="game.css">
   </head>
   <body>
+  	  <div id="gameName">Clean Ocean Game</div>
 	  <div class="wrapper">
-              <canvas width="0" height="0" class="canvas" id="canvas">Ваш браузер не поддерживает JavaScript и HTML5!</canvas>
+              <canvas id="map" width="800" height="500" class="canvas">Ваш браузер не поддерживает JavaScript и HTML5!</canvas>
+              <canvas id="player"></canvas>
+              <canvas id="enemy"></canvas>
+              <input id="drawBtn" type="button" value="Draw">
+              <input id="clearBtn" type="button" value="Clear">
           </div>
   </body>
 </html>
