add canvas for score

--- a/zakharo_game.html
+++ b/zakharo_game.html
@@ -14,7 +14,9 @@
               <canvas id="player"></canvas>
               <canvas id="enemy"></canvas>
               <canvas id="fish"></canvas>
+              <canvas id="fire"></canvas>
               <canvas id="stats"></canvas>
+              <canvas id="stats_score"></canvas>
               <input id="drawBtn" type="button" value="Draw">
               <input id="clearBtn" type="button" value="Clear">
           </div>
