--- a/zakharo_game.html
+++ b/zakharo_game.html
@@ -13,6 +13,7 @@
               <canvas id="map" width="800" height="500" class="canvas">Ваш браузер не поддерживает JavaScript и HTML5!</canvas>
               <canvas id="player"></canvas>
               <canvas id="enemy"></canvas>
+              <canvas id="enemy2"></canvas>
               <canvas id="fish"></canvas>
               <canvas id="fire"></canvas>
               <canvas id="stats"></canvas>
